[tool.poetry]
name = "Jinx"
version = "0.1.0"
description = "Django国际化工具"
authors = ["Kiritoscs <kiritoscs@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
arrow = "1.2.2"
click = "8.1.3"
polib = "1.2.0"
types-polib = "1.2.0.0"
requests = "2.28.2"
rich = "13.3.2"

[[tool.poetry.source]]
name = "default"
url = "https://mirrors.tencent.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
  | .+/node_modules
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/node_modules/**"]

[tool.flake8]
ignore = "C901,E203,W503,F405"
max-line-length = 119
max-complexity = 8
format = "pylint"
exclude = "*migrations*,*.pyc,.git,__pycache__"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = false
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "polib",
    "requests"
]
ignore_missing_imports = true
