[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "django-jinx"
version = "0.0.1"
authors = [
  { name="kiritoscs", email="kiritoscs@gmail.com" },
]
license = {file = "LICENSE"}
description = "A full-stack i18n solution for Django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arrow >= 1.2.2",
  "click >= 8.1.3",
  "polib >= 1.2.0",
  "requests >= 2.28.2",
  "rich >= 13.3.2",
  "json5 >= 0.9.11"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "django",
    "i18n",
    "internationalization",
    "translation",
    "localization",
    "l10n",
    "django-i18n",
    "django-internationalization",
    "django-translation",
    "django-localization",
    "django-l10n",
]

[project.urls]
"Homepage" = "https://github.com/kiritoscs/jinx"
"Bug Tracker" = "https://github.com/kiritoscs/jinx/issues"


[tool.poetry]
name = "django-jinx"
version = "0.1.0"
description = "Django国际化工具"
authors = ["Kiritoscs <kiritoscs@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
arrow = "1.2.2"
click = "8.1.3"
polib = "1.2.0"
requests = "2.28.2"
rich = "13.3.2"
json5 = "0.9.11"

[[tool.poetry.source]]
name = "default"
url = "https://mirrors.tencent.com/pypi/simple/"
default = true


[tool.black]
line-length = 119
skip-string-normalization = 'true'
exclude = '''
/(
  | .+/node_modules
)/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/node_modules/**"]

[tool.flake8]
ignore = "C901,E203,W503,F405"
max-line-length = 119
max-complexity = 8
format = "pylint"
exclude = "*migrations*,*.pyc,.git,__pycache__"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = false
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "polib",
    "requests"
]
ignore_missing_imports = true
